@@ -4,6 +4,8 @@ Maintenance release.
 
  * Fix modeltest.py so that it works with Qt 4.7.
    (Bug #614123, Gary van der Merwe)
+ * qbrowse: fixed 'Mark as renamed' feature in treewidget.
+   (Bug #620433, Alexander Belchenko)
  * qrun: fixed '--execute' mode. (Bug #590229, Simon Kersey) 
 
 
